--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -233,6 +233,7 @@
                 android:text="@string/save_to_phonebook"
                 android:textAlignment="center"
                 android:textAllCaps="false"
+                android:id="@+id/btn_save"
                 android:textSize="@dimen/_14ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
