--- a/app/src/main/res/layout/layout_capture_photo.xml
+++ b/app/src/main/res/layout/layout_capture_photo.xml
@@ -3,51 +3,43 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:padding="@dimen/_16sdp"
+    android:padding="@dimen/_10sdp"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/img_click_camera"
-        android:layout_width="@dimen/_32sdp"
-        android:layout_height="@dimen/_32sdp"
-        android:src="@drawable/ic_capture_photo_24"
+
+    <TextView
+        android:id="@+id/txt_capture"
+        android:layout_width="0dp"
+        android:layout_height="@dimen/_40sdp"
+        android:drawableStart="@drawable/ic_capture_photo_24"
+        android:drawablePadding="@dimen/_10sdp"
+        android:gravity="center_vertical"
+        android:text="@string/click_for_img"
+        android:textSize="@dimen/_14ssp"
+        android:clickable="true"
+        android:focusable="true"
+        android:textStyle="bold"
+        tools:ignore="UseCompatTextViewDrawableXml"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="0dp"
-        android:textStyle="bold"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/_14ssp"
-        android:text="@string/click_for_img"
-        android:layout_marginStart="@dimen/_16sdp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_click_camera"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_click_camera"
-        app:layout_constraintTop_toTopOf="@+id/img_click_camera" />
-
-    <ImageView
-        android:id="@+id/img_file_take"
-        android:layout_width="@dimen/_36sdp"
-        android:layout_height="@dimen/_36sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:src="@drawable/ic_take_from_gallery_24"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/img_click_camera" />
-
 
     <TextView
+        android:id="@+id/txt_folder"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_16sdp"
+        android:layout_height="@dimen/_40sdp"
         android:text="@string/take_from_folder"
-        android:textStyle="bold"
         android:textSize="@dimen/_14ssp"
-        app:layout_constraintBottom_toBottomOf="@+id/img_file_take"
+        android:clickable="true"
+        android:focusable="true"
+        android:drawablePadding="@dimen/_10sdp"
+        android:gravity="center_vertical"
+        android:drawableStart="@drawable/ic_take_from_gallery_24"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_click_camera"
-        app:layout_constraintTop_toTopOf="@+id/img_file_take" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_capture"
+        tools:ignore="UseCompatTextViewDrawableXml" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
