--- a/app/src/main/res/layout/fragment_save_contact.xml
+++ b/app/src/main/res/layout/fragment_save_contact.xml
@@ -35,6 +35,7 @@
                 android:layout_width="@dimen/_32sdp"
                 android:layout_height="@dimen/_32sdp"
                 app:elevation="@dimen/_4sdp"
+                app:backgroundTint="@color/white"
                 app:fabCustomSize="@dimen/_32sdp"
                 android:layout_marginTop="@dimen/_minus24sdp"
                 android:contentDescription="@string/edit"
@@ -246,5 +247,18 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_swipe"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_margin="@dimen/_10sdp"
+        android:contentDescription="@string/edit"
+        android:src="@drawable/ic_swipe_24"
+        app:backgroundTint="@color/main_fab"
+        app:elevation="@dimen/_4sdp"
+        app:fabCustomSize="@dimen/_40sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
